[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "congress-rag"
version = "0.1.0"
description = "Scrape lawmaker.twreporter.org congress data into SQLite and JSONL for RAG."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx[http2]>=0.27.0",
  "lxml>=5.0.0",
  "pydantic>=2.7.0",
  "tenacity>=8.2.0",
  "tqdm>=4.66.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
congress-rag = "congress_rag.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
